<resources>
    <string name="app_name">+Gentil</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtNome">Nome</string>
    <string name="txtCPF">CPF</string>
    <string name="txtEndereço">Endereço</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtGenero">Gênero</string>
    <string name="txtGeneroMasculino">Masculino</string>
    <string name="txtGeneroFeminino">Feminino</string>
    <string name="txtGeneroOutro">Prefiro não informar</string>
    <string name="txtDataNascimento">Data de Nascimento</string>
    <string name="txtConfirmaSenha">Confirme sua senha</string>
    <string name="txtEditarPerfil">Editar perfil</string>
    <string name="txtSenha">Senha</string>
    <string name="txtNomeInstituicao">Nome da Instituição</string>
    <string name="txtEnviar">Enviar</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtFazerCadastro">Cadastrar</string>
    <string name="txtCrieCadastro">Crie seu cadastro</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtSalvar">Salvar</string>
    <string name="txtNext">Próximo</string>
    <string name="txtVol"> Sou voluntário</string>
    <string name="txtRepr"> Sou representante</string>
    <string name="txtCNPJdaInstituiçao">CNPJ da Instituição</string>
    <string name="txtNomeRepresentante">Nome do Representante</string>
    <string name="txtCPFRepresentante">CPF do Representante</string>
    <string name="txtRegistrarse">Crie sua conta</string>

    <string name="txtHomeVoluntario">Olá, voluntário!</string>
    <string name="txtForYou">Para você</string>
    <string name="txtSuasDoacoes1">Suas doações</string>
    <string name="txtSuasDoacoes2">Veja o que as instituições precisam</string>
    <string name="txtInst1">Instituições e ONGs</string>
    <string name="txtDoacoes3">Acompanhe suas doações</string>
    <string name="txtNotiEve1">Notícias e eventos</string>
    <string name="txtNotiEve2">Acompanhe a gentileza por aí</string>
    <string name="txtMeuPerfil">Meu perfil</string>
    <string name="txtHomeRepresentativeArrecadar">Arrecadar</string>


    <string name="txtHomeRepr">Olá, representante!</string>
    <string name="txtDoacoes1">Doações</string>
    <string name="txtDoacoes2">Veja o que os voluntários estão doando</string>
    <string name="txtArrecad1">O que está precisando?</string>
    <string name="txtArrecad2">Itens para arrecadar</string>


    <string name="txtJaTemUmaConta1">Já tem uma conta?</string>
    <string name="txtJaTemUmaConta2">Faça seu login</string>

    <string name="txtbotgentil">Olá, eu sou o +Gentil</string>

    <string name="txt1main">Seja mais gentil com o +Gentil</string>
    <string name="txt2main">Descubra as instituições de caridade mais próximas de você, reúna-se com voluntários e promova eventos e campanhas beneficentes. Tudo em um lugar só.</string>
    <string name="txt1forgot">Esqueceu sua senha?</string>
    <string name="txt2forgot">Para redefinir sua senha, informe abaixo o e-mail cadastrado para enviarmos um link com as instruções.</string>
    <string name="txt1login">Seja bem-vindo ao +Gentil</string>
    <string name="txt2login">Ficamos muito felizes em tê-lo aqui! Você deseja se cadastrar como voluntário ou como representante de instituição beneficente?</string>
    <string name="txt3login">Olá, Voluntário!</string>
    <string name="txt4login">Olá, Representante!</string>
    <string name="txt5login">Bem-vindo de volta!</string>
    <string name="txt3forgot">Esqueceu sua senha?</string>
    <string name="txt3main">Ir para +Gentil</string>
    <string name="title_activity_chatbot">ChatbotActivity</string>
    <string name="txtHomeVoluntaryPublicacoes">Publicações</string>
    <string name="txtHomeVoluntaryEventos">Eventos</string>

    <string name="txtHomeVoluntaryItensDoar">Itens a doar</string>
    <string name="txtHomeVoluntaryEditButton">Editar perfil</string>
    <string name="txtVol2">Maria · ONG Coração de Jesus</string>
    <string name="txtVol3">Brasília · DF · CEP 2929932</string>
    <string name="txtAnuncio1">Cesta básica</string>
    <string name="txtAnuncio2">Roupas</string>
    <string name="txtAnuncio3">Cobertores</string>
    <string name="txtAnuncio4">Artigos eletrônicos</string>

    <string name="txtAnuncios">Minhas doações</string>
    <string name="txtAnuncios3">Adicionar itens para doação</string>
    <string name="txtDescricaoAnuncio">Descrição*</string>
    <string name="txtTituloAnuncio">Título do anúncio*</string>
    <string name="txtCategoriaAnuncio">Categoria*</string>
    <string name="txtQuantidadeAnuncio">Quantidade*</string>
    <string name="txtUFAnuncio">Estado*</string>


    <string name="title2on">Ajude o próximo enquanto se diverte</string>
    <string name="txt2on">Com o +Gentil é muito mais fácil ser gentil: você ajuda brincando. Participe dos desafios, atinja novos níveis e faça com que as campanhas e ações voluntárias cheguem a mais pessoas.</string>

    <string name="title3on">Tire suas dúvidas  com o +Gentil</string>
    <string name="txt3on">O chatbot mais gentil que você verá por aí. O +Gentil irá te auxiliar em toda sua jornada em ajudar o próximo, te dando dicas e informações importantes, e tirando suas dúvidas. </string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--
    Strings BottomBar
    -->
    <string name="txtMenuHome">Início</string>
    <string name="txtMenuMapa">Mapa</string>
    <string name="txtMenuPub">Notícias</string>
    <string name="txtMenuProfile">Meu perfil</string>
    <!--
    Strings Gamification
    -->
    <string name="txtMeusPontos">Meus pontos</string>
    <string name="txtResgatarPontos">Resgatar pontos</string>
    <string name="txtMissoesDiarias">Missões diárias</string>
    <string name="txtConquistas">Conquistas</string>
    <string name="txtStoreTitle">Resgate seus pontos</string>
    <string name="txtMissoesConvide">Convide 3 amigos a entrar no +Gentil</string>
    <string name="txtMissoesCurta">Curta 3 publicações</string>
    <string name="txtMissoesCompartilhe">Compartilhe 3 publicações ou eventos</string>


    <string name="email_required">O campo email está vazio. Por favor preencha!</string>
    <string name="password_required">O campo password está vazio. Por favor preencha!</string>
    <string name="invalid_email">O email informado é inválido. Por favor verificar!</string>
    <string name="password_minimum_length">A senha contém menos de 6 dígitos. Por favor verificar!</string>

</resources>